--- a/app/html/site/activity.html
+++ b/app/html/site/activity.html
@@ -24,7 +24,7 @@
       <div data-name="@{_('User:')}" class="elem sub pure-u-1 pure-u-md-3-24">
         <a href="/u/@{it['user']}">@{it['user']}</a>
       </div>
-      <div data-name="@{_('Content:')}" id="activity_list_sidebar" class="elem-content sub pure-u-1 pure-u-md-14-24">
+      <div data-name="@{_('Content:')}" id="activity_list" class="elem-content sub pure-u-1 pure-u-md-14-24">
         @if it['type'] == 'comment':
         <span class="activity-tag medium" alt="Commented">@{_('commented:')}</span>
         <span>@{_('%(text)s', text='<a class="title ' + it['blur'] + '" href="' + url_for('sub.view_perm', sub=it['sub'], cid=it['cid'], pid=it['pid'], slug=func.slugify(it['content'])) + '#comment-' + it['cid'] + '"><br>' + e(func.word_truncate(''.join(BeautifulSoup(markdown(it['content']), features='lxml').findAll(text=True)).replace('\n', ' '), 150)) + '</a>')!!html}</span>
