--- a/app/html/shared/sidebar/home.html
+++ b/app/html/shared/sidebar/home.html
@@ -43,6 +43,7 @@
     <h4 class="center"><a href="/activity" style="text-decoration: none; color: inherit;">@{_('Recent activity')}</a>
     @if config.site.recent_activity.live:
       <span class="live-activity-tag" title="@{_('live updates')}">@{_('LIVE')}</span>
+    @end
     </h4>
     <ul class="top5" id="activity_list_sidebar">
       @for post in func.recent_activity(sidebar=True, filter_shadowbanned=True, filter_private=True):
