--- a/app/html/sub/post.html
+++ b/app/html/sub/post.html
@@ -1,5 +1,5 @@
 @extends("shared/sub.html")
-@require(post, sub, is_saved, subInfo, pollData, commentform, comments, comment_count, postmeta, subMods, highlight, content_history, title_history, open_reports, sort, sticky_sort)
+@require(post, sub, form, is_saved, subInfo, pollData, commentform, comments, comment_count, postmeta, subMods, highlight, content_history, title_history, open_reports, sort, sticky_sort)
 @import "sub/postcomments.html" as pcomm
 @import "sub/postpoll.html" as polls
 
