Introducing sub-specific search v2

--- a/app/html/shared/sidebar/sub.html
+++ b/app/html/shared/sidebar/sub.html
@@ -1,7 +1,13 @@
 @require(sub, subInfo, subMods)
 <form class="pure-g search" action="@{ url_for('do.search') }" method="post">
   <div class="icon" data-icon="search"> </div>
-  <input aria-label="Search" name="term" placeholder="@{_('Title search...')}" type="search" class="pure-u-1">
+    <input aria-label="Search" name="term" placeholder="@{_('Title search...')}" type="search" class="pure-u-1">
+    <input type="hidden" name="sub" value="@{sub['sid']}" />
+    <input type="hidden" name="sub_name" value="@{sub['name']}" />
+    <div class="pure-control-group" style="position: relative; left: 7px; letter-spacing: normal; width: 100%">
+      <input type="checkbox" name="subonlysearch" id="subonlysearch" value="y" @{' checked' if form.SubOnlySearchForm.data else ''}>
+      <label for="subonlysearch">@{form.SubOnlySearchForm()!!html} @_("Limit my search to") /@{config.site.sub_prefix}/@{sub['name']}</label>
+    </div>
 </form>
 <hr>
 
