--- a/app/html/sub/settings.html
+++ b/app/html/sub/settings.html
@@ -94,6 +94,13 @@
           </label>
         </div>
 
+        <div class="pure-control-group">
+          <label for="commentscore_delay" class="pure-control-group">
+              @{editsubform.commentscore_delay.label.text}
+              @{editsubform.commentscore_delay!!html} (min)
+          </label>
+        </div>
+
         <h4>@{_('Post flairs')}</h4>
         <div class="pure-control-group">
           <label for="usercanflair" class="pure-checkbox">
