--- a/app/html/sub/post.html
+++ b/app/html/sub/post.html
@@ -1,5 +1,5 @@
 @extends("shared/sub.html")
-@require(post, sub, is_saved, subInfo, pollData, commentform, comments, comment_count, postmeta, subMods, highlight, content_history, title_history, open_reports, sort, sticky_sort)
+@require(post, sub, commentscore_delay, is_saved, subInfo, pollData, commentform, comments, comment_count, postmeta, subMods, highlight, content_history, title_history, open_reports, sort, sticky_sort)
 @import "sub/postcomments.html" as pcomm
 @import "sub/postpoll.html" as polls
 
@@ -514,7 +514,7 @@
         <div id="allcomments">
           <span id="cmnts" class="allcomments" data-cnt="@{comment_count}"><a href="@{url_for('sub.view_post', sub=sub['name'], pid=post['pid'])}">@{_('%(comments)i comments', comments=comment_count)}</a></span>
         </div>
-      @{pcomm.renderComments(post, postmeta, subInfo, subMods, comments, highlight, sort)!!html}
+      @{pcomm.renderComments(post, postmeta, commentscore_delay, subInfo, subMods, comments, highlight, sort)!!html}
     </div>
   @end
 
