--- a/app/html/user/comments.html
+++ b/app/html/user/comments.html
@@ -69,7 +69,11 @@
                 <div class="commblock">
                   <div class="commenthead">
                       <a href="@{url_for('user.view', user=user.name)}" class="poster">@{user.name}</a>
-                      <b><span class="cscore">@{comment['score']}</span> @{_('Comment score')}</b>
+                      @if (comment['time'] and (datetime.datetime.utcnow() - comment['time']).total_seconds() < (comment['commentscore_delay'] * 60)):
+                        <span>@{_('[score hidden]')}</span>
+                      @else:
+                        <b><span class="cscore">@{comment['score']}</span> @{_('points')}</b>
+                      @end
                       <span class="time">
                          <time-ago datetime="@{comment['time'].isoformat()}Z"></time-ago>
                       </span>
