--- a/app/html/user/messages/notifications.html
+++ b/app/html/user/messages/notifications.html
@@ -84,9 +84,17 @@
           @if msg['cid']:
             @if msg['comment_context']:
               @if msg['type'] == 'COMMENT_REPLY':
-            <p class="author">@{_("Your comment. Posted %(timeago)s. <b class='cscore'>%(score)i</b> points.", timeago='<time-ago datetime="' + msg['comment_context_posted'].isoformat() + 'Z"></time-ago>', score=msg['comment_context_score'])!!html}</p>
+                @if msg['comment_context_posted'] and (datetime.datetime.utcnow() - msg['comment_context_posted']).total_seconds() < (msg['commentscore_delay'] * 60):
+                  <p class="author">@{_("Your comment. Posted %(timeago)s. [score hidden]", timeago='<time-ago datetime="' + msg['comment_context_posted'].isoformat() + 'Z"></time-ago>')!!html}</p>
+                @else:
+                  <p class="author">@{_("Your comment. Posted %(timeago)s. <b class='cscore'>%(score)i</b> points", timeago='<time-ago datetime="' + msg['comment_context_posted'].isoformat() + 'Z"></time-ago>', score=msg['comment_context_score'])!!html}</p>
+                @end
               @else:
-            <p class="author">@{_("Comment. Posted %(timeago)s. <b class='cscore'>%(score)i</b> points.", timeago='<time-ago datetime="' + msg['comment_context_posted'].isoformat() + 'Z"></time-ago>', score=msg['comment_context_score'])!!html}</p>
+                @if msg['comment_context_posted'] and (datetime.datetime.utcnow() - msg['comment_context_posted']).total_seconds() < (msg['commentscore_delay'] * 60):
+                  <p class="author">@{_("Comment. Posted %(timeago)s. [score hidden]", timeago='<time-ago datetime="' + msg['comment_context_posted'].isoformat() + 'Z"></time-ago>')!!html}</p>
+                @else:
+                  <p class="author">@{_("Comment. Posted %(timeago)s. <b class='cscore'>%(score)i</b> points", timeago='<time-ago datetime="' + msg['comment_context_posted'].isoformat() + 'Z"></time-ago>', score=msg['comment_context_score'])!!html}</p>
+                @end
               @end
             <div class="container @{msg['blur']}">@{markdown(msg['comment_context'])!!html}</div>
             <div class="pchild" style="padding-left: 5px;">
@@ -97,9 +105,17 @@
             @end
             <p class="author" style="width: auto;">
               @if msg['read']:
-                @{_("Posted %(timeago)s. <b>%(score)s</b> points. Read %(timeagoread)s", timeago='<time-ago datetime="' + msg['created'].isoformat() + 'Z"></time-ago>', score='<span class="cscore">' + str(msg['comment_score']) + '</span>', timeagoread='<time-ago datetime="' + msg['read'].isoformat() + 'Z"></time-ago>')!!html}
+                @if msg['created'] and (datetime.datetime.utcnow() - msg['created']).total_seconds() < (msg['commentscore_delay'] * 60):
+                  @{_("Posted %(timeago)s. [score hidden] (read %(timeagoread)s)", timeago='<time-ago datetime="' + msg['created'].isoformat() + 'Z"></time-ago>', timeagoread='<time-ago datetime="' + msg['read'].isoformat() + 'Z"></time-ago>')!!html}
+                @else:
+                  @{_("Posted %(timeago)s. <b>%(score)s</b> points (read %(timeagoread)s)", timeago='<time-ago datetime="' + msg['created'].isoformat() + 'Z"></time-ago>', score='<span class="cscore">' + str(msg['comment_score']) + '</span>', timeagoread='<time-ago datetime="' + msg['read'].isoformat() + 'Z"></time-ago>')!!html}
+                @end
               @else:
-                @{_("Posted %(timeago)s. <b>%(score)s</b> points.", timeago='<time-ago datetime="' + msg['created'].isoformat() + 'Z"></time-ago>', score='<span class="cscore">' + str(msg['comment_score']) + '</span>')!!html}
+                @if msg['created'] and (datetime.datetime.utcnow() - msg['created']).total_seconds() < (msg['commentscore_delay'] * 60):
+                  @{_("Posted %(timeago)s. [score hidden]", timeago='<time-ago datetime="' + msg['created'].isoformat() + 'Z"></time-ago>')!!html}
+                @else:
+                  @{_("Posted %(timeago)s. <b>%(score)s</b> points", timeago='<time-ago datetime="' + msg['created'].isoformat() + 'Z"></time-ago>', score='<span class="cscore">' + str(msg['comment_score']) + '</span>')!!html}
+                @end
               @end
             </p>
             <div class="container @{msg['unseen']} @{msg['blur']} @{msg['read'] == None and 'newmsgbg' or ''}" id="content-@{msg['cid']}">@{markdown(msg['comment_content'])!!html}</div>
