--- a/app/html/user/uploads.html
+++ b/app/html/user/uploads.html
@@ -48,10 +48,10 @@
 </div>
 <div class="col-12">
   @if len(uploads) == 30:
-    <a href="@{url_for('user.view_user_uploads', page=(page+1))}" class="pure-button">@{_('Next')}</a>
+    <a href="@{url_for('user.view_user_uploads', page=(page+1))}" class="pure-button">⮜ @{_('Next')}</a>
   @end
   @if page > 1:
-    <a href="@{url_for('user.view_user_uploads', page=(page-1))}" class="pure-button">@{_('Previous')}</a>
+    <a href="@{url_for('user.view_user_uploads', page=(page-1))}" class="pure-button alldarightprev">@{_('Previous')} ⮞</a>
   @end
 </div>
 </div>
