Config option to globally disable email sending

--- a/app/html/admin/wiki.html
+++ b/app/html/admin/wiki.html
@@ -12,7 +12,7 @@ Admin |\
 <div id="container">
   <div id="center-container">
     <div class="content">
-      <h1>@{_('Site wiki')}</h1>
+      <h1>@{_('Site wikis')}</h1>
       <a href="@{url_for('admin.create_wiki')}" class="pure-button pure-button-primary" style="margin-bottom: 1em">Create wiki</a>
 
       <div class="admin section users">
