--- a/app/html/shared/sidebar/admin.html
+++ b/app/html/shared/sidebar/admin.html
@@ -1,4 +1,4 @@
-<a href="@{url_for('admin.index')}" class="sbm-post pure-button">@{_('Admin')}</a>
+<a href="@{url_for('admin.index')}" class="sbm-post pure-button">@{_('Admin panel')}</a>
 <hr>
 <a href="@{url_for('admin.view')}" class="sbm-post pure-button">@{_('Admins')}</a>
 <a href="@{url_for('admin.users')}" class="sbm-post pure-button">@{_('Users')}</a>
