--- a/app/html/user/savedcomments.html
+++ b/app/html/user/savedcomments.html
@@ -105,10 +105,10 @@
         </div>
 
         @if len(comments) == 20:
-        <a href="@{url_for('user.view_user_savedcomments', user=current_user.name, page=(page+1))}" class="pure-button">⮜ @{_('Next')}</a>
+        <a href="@{url_for('user.view_user_savedcomments', user=current_user.name, page=(page+1))}" class="pure-button">@{_('Next')}</a>
         @end
         @if page > 1:
-        <a href="@{url_for('user.view_user_savedcomments', user=current_user.name, page=(page-1))}" class="pure-button alldarightcomments">@{_('Previous')} ⮞</a>
+        <a href="@{url_for('user.view_user_savedcomments', user=current_user.name, page=(page-1))}" class="pure-button alldarightcomments">@{_('Previous')}</a>
         @end
 
       </div>
