Fixing some minor stuff v1

--- a/app/html/user/register.html
+++ b/app/html/user/register.html
@@ -21,7 +21,7 @@
                 </div>
                 @end
                 <div class="pure-control-group">
-                    <label for="username">@{regform.username.label.text}</label>@{regform.username(placeholder=regform.username_placeholder.label.text, required=True, maxlength=config.site.username_max_length, pattern="[a-zA-Z0-9_-]+", title=_('Alphanumeric characters plus \'-\' and \'_\'; between 2 and %(num)d characters long', num=config.site.username_max_length))!!html}
+                    <label for="username">@{regform.username.label.text}</label>@{regform.username(placeholder=regform.username_placeholder.label.text, required=True, maxlength=config.site.username_max_length, pattern="[a-zA-ZÁ-ž0-9]+", title=_('Alphanumeric characters plus \'-\' and \'_\'; between 2 and %(num)d characters long', num=config.site.username_max_length))!!html}
                 </div>
 
                 <div class="pure-control-group">
