Tidying up comments Sort by v2

--- a/app/html/sub/post.html
+++ b/app/html/sub/post.html
@@ -478,7 +478,7 @@
                         @else:
                           &nbsp;&nbsp;
                         @end
-                        @{_('Best')}
+                        @{_('best')}
                       </a>
                     </li>
                   @end
@@ -489,7 +489,7 @@
                       @else:
                         &nbsp;&nbsp;
                       @end
-                      @{_('Top')}
+                      @{_('top')}
                     </a>
                   </li>
                   <li class="pure-menu-item">
@@ -499,7 +499,7 @@
                       @else:
                         &nbsp;&nbsp;
                       @end
-                      @{_('New')}
+                      @{_('new')}
                     </a>
                   </li>
                   <li class="pure-menu-item">
@@ -509,7 +509,7 @@
                       @else:
                         &nbsp;&nbsp;
                       @end
-                      @{_('Old')}
+                      @{_('old')}
                     </a>
                   </li>
                 </ul>
