--- a/app/html/shared/sidebar/home.html
+++ b/app/html/shared/sidebar/home.html
@@ -17,8 +17,8 @@
 @if func.getTodaysTopPosts():
   <hr/>
   <div class="sidebarlists">
-    <h4 class="center">@{_('Top posts in the last 24 hours')}</h4>
     <ul class="top5">
+      <h4 class="center top5">@{_('Top posts in the last 24 hours')}</h4>
       @for post in func.getTodaysTopPosts():
         <li>
           @if config.site.top_posts.show_score:
@@ -40,12 +40,12 @@
 @if config.site.recent_activity.enabled:
   <hr/>
   <div class="sidebarlists">
-    <h4 class="center"><a href="/activity" style="text-decoration: none; color: inherit;">@{_('Recent activity')}</a>
-    @if config.site.recent_activity.live:
-      <span class="live-activity-tag" title="@{_('live updates')}">@{_('LIVE')}</span>
-    @end
-    </h4>
     <ul class="top5" id="activity_list_sidebar">
+      <h4 class="center top5"><a href="/activity" style="text-decoration: none; color: inherit;">@{_('Recent activity')}</a>
+      @if config.site.recent_activity.live:
+        <span class="live-activity-tag" title="@{_('live updates')}">@{_('LIVE')}</span>
+      @end
+      </h4>
       @for post in func.recent_activity(sidebar=True, filter_shadowbanned=True, filter_private=True):
         <li>
           <div class="sidelocale">
@@ -68,8 +68,8 @@
 @if subOfTheDay:
   <hr>
   <div class="sidebarlists">
-    <h4 class="center">@{_('Sub of the day')}</h4>
-    <ul>
+    <ul class="top5">
+      <h4 class="center top5">@{_('Sub of the day')}</h4>
       <li><a href="@{url_for('sub.view_sub', sub=subOfTheDay.name)}">/@{config.site.sub_prefix}/@{subOfTheDay.name}</a>
         <div class="sidelocale">@{subOfTheDay.title}</div></li>
     </ul>
@@ -78,8 +78,8 @@
 @if changeLog:
   <hr>
   <div class="sidebarlists">
-    <h4 class="center"><a href="@{url_for('sub.view_sub', sub=changeLog['sub'])}" style="text-decoration: none; color: inherit;">@{_('Changelog')}</a></h4>
-    <ul>
+    <ul class="top5">
+      <h4 class="center top5"><a href="@{url_for('sub.view_sub', sub=changeLog['sub'])}" style="text-decoration: none; color: inherit;">@{_('Changelog')}</a></h4>
       <li><a class="title" href="@{url_for('sub.view_post', sub=changeLog['sub'], pid=changeLog['pid'])}">@{changeLog['title']}</a><br>
 <!--      <span class="sidelocale">-->
 <!--        @{_("%(timeago)s in %(sub)s", timeago='<time-ago datetime="' + changeLog['posted'].isoformat() + 'Z"></time-ago>', sub='<a href="' + url_for('sub.view_sub', sub=changeLog['sub']) + '">/' + config.site.sub_prefix + '/' + changeLog['sub'] + '</a>') !!html}-->
