Introducing image uploads inside comments and text posts

--- a/app/html/sub/createpost.html
+++ b/app/html/sub/createpost.html
@@ -68,6 +68,7 @@
                                         <tr><td>*@{_('italics')}*</td><td><em>@{_('italics')}</em></td></tr>
                                         <tr><td>**@{_('bold')}**</td><td><b>@{_('bold')}</b></td></tr>
                                         <tr><td>[link](https://cekni.to)</td><td><a href="https://cekni.to">link</a></td></tr>
+                                        <tr><td>![image](https://cekni.to/pic.jpg)</td><td style="font-size: 24px;">🖼️</td></tr>
                                         <tr><td style="vertical-align: top;">* @{_('item')} 1<br>* @{_('item')} 2<br>* @{_('item')} 3</td><td><ul style="margin: 0px 16px 0px 16px;"><li>@{_('item')} 1</li><li>@{_('item')} 2</li><li>@{_('item')} 3</li></ul></td></tr>
                                         <tr><td>&gt; @{_('quoted text')} </td><td><blockquote>@{_('quoted text')}</blockquote></td></tr>
                                         <tr><td>@{_('Lines starting with four spaces<br>are treated like code:')!!html}<br><br><span class="spaces">&nbsp;&nbsp;&nbsp;&nbsp;</span>if 1 * 2 < 3:<br><span class="spaces">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>print "hello, world!"<br></td>
@@ -101,6 +102,7 @@
                                         <tr><td>*@{_('italics')}*</td><td><em>@{_('italics')}</em></td></tr>
                                         <tr><td>**@{_('bold')}**</td><td><b>@{_('bold')}</b></td></tr>
                                         <tr><td>[link](https://cekni.to)</td><td><a href="https://cekni.to">link</a></td></tr>
+                                        <tr><td>![image](https://cekni.to/pic.jpg)</td><td style="font-size: 24px;">🖼️</td></tr>
                                         <tr><td style="vertical-align: top;">* @{_('item')} 1<br>* @{_('item')} 2<br>* @{_('item')} 3</td><td><ul style="margin: 0px 16px 0px 16px;"><li>@{_('item')} 1</li><li>@{_('item')} 2</li><li>@{_('item')} 3</li></ul></td></tr>
                                         <tr><td>&gt; @{_('quoted text')} </td><td><blockquote>@{_('quoted text')}</blockquote></td></tr>
                                         <tr><td>@{_('Lines starting with four spaces<br>are treated like code:')!!html}<br><br><span class="spaces">&nbsp;&nbsp;&nbsp;&nbsp;</span>if 1 * 2 < 3:<br><span class="spaces">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>print "hello, world!"<br></td>
