--- a/app/html/admin/editbadge.html
+++ b/app/html/admin/editbadge.html
@@ -25,7 +25,7 @@
                 @if not new:
                   <label for="icon"><img src="@{badge.icon_url()}" width="60" height="60" /></label>
                 @else:
-                  <label for="icon">@{form.icon.label}</label>
+                  <label for="icon">@{form.icon.label!!html}</label>
                 @end
                 @{form.icon(required=new)!!html}
               </div>
