--- a/app/html/subs.html
+++ b/app/html/subs.html
@@ -98,19 +98,19 @@
     @if nav=='home.subs_search':
       <div class="col-12">
         @if page > 1:
-        <a href="@{url_for(nav, term=term, page=(page-1))}" class="pure-button"><--</a>
+        <a href="@{url_for(nav, term=term, page=(page-1))}" class="pure-button"><==</a>
         @end
         @if len(subs) == 50:
-        <a href="@{url_for(nav,term=term, page=(page+1))}" class="pure-button">--></a>
+        <a href="@{url_for(nav,term=term, page=(page+1))}" class="pure-button">==></a>
         @end
       </div>
     @else:
       <div class="col-12">
         @if page > 1:
-        <a href="@{url_for(nav, page=(page-1))}" class="pure-button"><--</a>
+        <a href="@{url_for(nav, page=(page-1))}" class="pure-button"><==</a>
         @end
         @if len(subs) == 50:
-        <a href="@{url_for(nav, page=(page+1))}" class="pure-button">--></a>
+        <a href="@{url_for(nav, page=(page+1))}" class="pure-button">==></a>
         @end
       </div>
   @end
